k8s/purchase-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: purchase-service
  labels:
    app: purchase-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: purchase-service
  template:
    metadata:
      labels:
        app: purchase-service
    spec:
      containers:
        - name: purchase-service
          image: velantechlab/inventory-purchase-api:latest
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
