k8s/sales-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sales-service
  labels:
    app: sales-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sales-service
  template:
    metadata:
      labels:
        app: sales-service
    spec:
      containers:
        - name: sales-service
          image: velantechlab/inventory-sales-api:latest
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
