k8s/purchase-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: purchase-service
  labels:
    app: purchase-service
spec:
  selector:
    app: purchase-service
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
