k8s/sales-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sales-service
  labels:
    app: sales-service
spec:
  selector:
    app: sales-service
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
