k8s/stock-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stock-service
  labels:
    app: stock-service
spec:
  selector:
    app: stock-service
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
